# python-yellka

./: .gitignore  .gitkeep  pyproject.toml  readme.md  shop.md  shop2.md  Гемплей Партии Елки (Секретно).xlsx
.github/workflows/: tests.yml
scripts/: dev.sh
src/yellka/: __init__.py  catalog.py  cli.py  discord_bot.py  discord_notify.py  money.py  service.py  shop_catalog.py  telegram.py  web_api.py
tests/: test_cli.py  test_discord_bot.py  test_economy.py  test_tracker_tasks.py  test_web_api.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts
