[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-yellka"
version = "0.1.0"
description = "SQLite-backed ASSIR/Yellka balance manager and Discord bot"
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CEHR2005" }
]
dependencies = [
    "discord.py>=2.3,<3",
    "fastapi>=0.128,<1",
    "httpx>=0.28,<1",
    "uvicorn[standard]>=0.38,<1",
]

[project.scripts]
yellka = "yellka.cli:main"
yellka-web = "yellka.web_api:main"

[tool.setuptools.packages.find]
where = ["src"]
